--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -12,7 +12,7 @@
   },
   "about": {
     "title": "About Me",
-    "description": "I am a research scientist passionate about physics and creative coding."
+    "description": "Hi, I'm Chen, an MSc student in Physics at Imperial College London and a remote research intern at the Beijing Academy of Quantum Information Sciences (BAQIS)."
   },
   "gallery": {
     "title": "Photography",
