--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -1,56 +1,11 @@
 {
-  "navigation": {
+  "translation": {
     "home": "首页",
     "about": "关于",
     "research": "研究",
     "blog": "博客",
     "notes": "笔记",
-    "gallery": "作品集"
-  },
-  "home": {
-    "title": "欢迎来到我的个人网站",
-    "subtitle": "研究科学家 & 创意开发者",
-    "description": "欢迎来到我的个人网站"
-  },
-  "about": {
-    "title": "关于我",
-    "description": "你好，我是陈，伦敦帝国理工学院物理系硕士生，同时也是北京量子信息科学研究院（BAQIS）的远程研究实习生。",
-    "nameMeaning": {
-      "chen": "我的名字是<b>陈</b>，在中文中意味着\"黎明\"或\"清晨\"。这个含义很适合我，因为我是一个喜欢清晨宁静时光的早起者。有趣的是，\"陈\"有时会被误听为\"橙\"，在中文中意味着\"橙色\"。因为这个有趣的相似性，我的朋友们亲切地称我为\"橙子\"。",
-      "huang": "我的姓氏是<b>黄</b>，在中文中意味着\"黄色\"。这个名字有着深厚的历史和文化根源。它经常与黄帝联系在一起，黄帝是中华文明的始祖之一。"
-    },
-    "research": {
-      "imperial": "我是伦敦帝国理工学院<b>受控量子动力学组</b>的硕士生。我的研究重点是半导体量子比特中的电荷噪声。通过实验和模拟，我旨在理解电荷噪声对量子比特性能的影响，并开发减轻其影响的策略。",
-      "baqis": "同时，我也是北京量子信息科学研究院（BAQIS）<b>量子操作系统组</b>的远程研究实习生。我的研究重点是中性原子的量子编译。"
-    }
-  },
-  "research": {
-    "title": "研究",
-    "description": "我的研究项目和成果"
-  },
-  "blog": {
-    "title": "博客",
-    "description": "我的博客文章"
-  },
-  "notes": {
-    "title": "笔记",
-    "description": "我的学习笔记"
-  },
-  "gallery": {
-    "title": "作品集",
-    "description": "我的作品展示",
-    "showAll": "显示全部"
-  },
-  "nav": {
-    "home": "首页",
-    "about": "关于我",
-    "research": "研究",
-    "blog": "博客",
-    "notes": "笔记",
-    "gallery": "相册",
-    "goodies": "资源"
-  },
-  "common": {
+    "gallery": "作品集",
     "readMore": "阅读更多",
     "backToTop": "返回顶部"
   }
