--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -10,7 +10,6 @@
     "blog": "blog",
     "notes": "notes",
     "gallery": "gallery",
-    "read-more": "read more",
     "back-to-top": "back to top",
     "random-post": "Random post",
     "random-note": "Random note",
@@ -41,7 +40,13 @@
     "read-more": "Read More"
   },
   "notes": {
-    "title": "Notes"
+    "title": "Notes",
+    "institution": "Institution",
+    "xiamen-foreign-language-school": "Xiamen Foreign Language School",
+    "huazhong-university-of-science-and-technology": "Huazhong University of Science and Technology",
+    "peking-university": "Peking University",
+    "imperial-college-london": "Imperial College London",
+    "self-study": "Self-study"
   },
   "gallery": {
     "title": "Gallery"
